--- a/frontend/src/components/RecipeCard.css
+++ b/frontend/src/components/RecipeCard.css
@@ -1,12 +1,35 @@
 .recipe-card{
-    margin: 3px;
-    background-color: #519E8A;
-    color: bisque;
-    padding: 5px;
+    flex: 1 1 300px;
+    background: #519E8A;
+    border: 1px solid whitesmoke;
+    overflow: hidden;
+    margin: 20px;
+    max-width: 332px;
+    box-shadow: 10px 10px 10px gray;
+}
+
+#recipe-image{
+    padding: 10px;
+    background: #519E8A;
+    text-align: center;
+}
+
+img{
+    width: 312px;
+    height: 231px;
+    object-fit: cover;
+}
+
+#recipe-title{
     display: flex;
-    flex-direction: column;
-    justify-content: space-between;
-    align-items: baseline;
-
-
+    justify-content: center;
+    padding: 5px;
+    color: white;
+    font-size: 20px;
+    font-weight: bold;
+}
+#recipe-description{
+    padding: 10px;
+    color: #666;
+    font-size: 15px;
 }
