--- a/frontend/src/components/RecipeCard.css
+++ b/frontend/src/components/RecipeCard.css
@@ -27,7 +27,7 @@ img{
 #recipe-title{
     padding: 5px;
     color: white;
-    font-size: 2.0vmax;
+    font-size: 2vh;
     font-weight: bold;
     border-bottom: 1px solid whitesmoke;
     display: flex;
