--- a/frontend/src/components/RecipeCard.css
+++ b/frontend/src/components/RecipeCard.css
@@ -25,15 +25,17 @@ img{
 }
 
 #recipe-title{
-    padding: 5px;
+    padding: 10px;
     color: white;
-    font-size: 2vh;
+    font-size: 20px;
     font-weight: bold;
     border-bottom: 1px solid whitesmoke;
     display: flex;
     flex-direction: row;
     justify-content: center;
     align-items: center;
+    /*white-space: nowrap;*/
+    /*align-self: normal;*/
     flex-grow: 1;
     flex-basis: 0;
 }
