--- a/frontend/src/components/RecipeCard.css
+++ b/frontend/src/components/RecipeCard.css
@@ -25,9 +25,9 @@ img{
 }
 
 #recipe-title{
-    padding: 5px;
+    padding: 10px;
     color: white;
-    font-size: 2vh;
+    font-size: 20px;
     font-weight: bold;
     border-bottom: 1px solid whitesmoke;
     display: flex;
