refactored Recipe model and added Instruction model - frontend

--- a/frontend/src/components/ShowInstructions.css
+++ b/frontend/src/components/ShowInstructions.css
@@ -3,3 +3,9 @@
     flex-direction: column;
     background-color: green;
 }
+
+.steps-total {
+    display: flex;
+    flex-direction: row;
+    background-color: #519E8A;
+}
