--- a/frontend/src/components/AddRecipe.css
+++ b/frontend/src/components/AddRecipe.css
@@ -1,3 +1,13 @@
 #url-warning {
     color: black;
 }
+
+.add-form {
+    display: flex;
+    flex-direction: column;
+    margin-left: 20%;
+    margin-right: 20%;
+    box-sizing: border-box;
+    text-transform: capitalize;
+    text-decoration: none;
+}
