--- a/frontend/src/components/ShowEquipment.css
+++ b/frontend/src/components/ShowEquipment.css
@@ -5,11 +5,15 @@
     justify-content: center;
     align-items: center;
     align-self: normal;
+    flex-wrap: wrap;
 }
 
 #equipment-total {
     display: flex;
     flex-direction: row;
+    flex-wrap: wrap;
+    align-items: center;
+    justify-content: center;
 }
 
 #equipment-details {
