--- a/frontend/src/components/Header.css
+++ b/frontend/src/components/Header.css
@@ -1,8 +1,12 @@
 .header {
     background-color: #519E8A;
     color: whitesmoke;
-    font-size: xxx-large;
+    font-size: xx-large;
     font-family: "Comic Sans MS", serif;
     font-weight: bolder;
     font-style: oblique;
+    padding: 20px;
+    display: flex;
+    justify-content: center;
+    align-content: center;
 }
