styled a lot of buttons

--- a/frontend/src/components/ShowEquipment.css
+++ b/frontend/src/components/ShowEquipment.css
@@ -1,5 +1,5 @@
 .equipment {
-    background-color: #476A6F;
+    background-color: #7EB09B;
     display: flex;
     flex-direction: column;
     justify-content: center;
