--- a/frontend/src/components/ShowDetailsRecipe.css
+++ b/frontend/src/components/ShowDetailsRecipe.css
@@ -1,26 +1,18 @@
-.general-recipe-info {
-    display: flex;
-    flex-direction: column;
-    border: solid white;
-}
-
-#title {
-    display: flex;
-    justify-content: center;
-    align-items: center;
-}
-
-#top-image-info {
-    color: lightgrey;
+#recipe-details-buttons{
+    color: deeppink;
     display: flex;
     flex-direction: row;
-    justify-content: center;
-    align-items: center;
+    justify-content: space-around;
+    align-content: center;
+    padding: 0 10% 5%;
 }
 
-#bottom-image-info {
-    display: flex;
-    flex-direction: row;
-    justify-content: center;
-    align-items: center;
+#details-button-symbol{
+    color: whitesmoke;
+    font-size: xx-large;
+    padding: 2%;
+    border-radius: 50%;
+    background-color: #476A6F;
+    border: 1px solid whitesmoke;
+    box-shadow: 0 10px 10px rgba(0,0,0,0.1);
 }
