styled more buttons and align content

--- a/frontend/src/components/ShowInstructions.css
+++ b/frontend/src/components/ShowInstructions.css
@@ -11,8 +11,13 @@
 
 #instruction-name {
     display: flex;
+    flex-direction: column;
     justify-content: center;
     align-items: center;
+}
+
+h6{
+    margin-top: 0;
 }
 
 #steps-all {
