--- a/frontend/src/components/ShowRecipeGeneralInfo.css
+++ b/frontend/src/components/ShowRecipeGeneralInfo.css
@@ -6,7 +6,8 @@
 #title {
     display: flex;
     justify-content: center;
-    align-items: center;
+    padding: 0 10% 0;
+    text-align: center;
 }
 
 #top-image-info {
