--- a/frontend/src/components/AddRecipe.css
+++ b/frontend/src/components/AddRecipe.css
@@ -120,6 +120,82 @@ input[type="checkbox"]:checked {
     border: 1px solid whitesmoke;
     box-shadow: 0 10px 10px rgba(0,0,0,0.1);
     display: flex;
+
     /*height: initial;*/
     /*width: initial;*/
+}
+
+#instructions-form{
+    display: flex;
+    flex-direction: row;
+    flex-wrap: wrap;
+    justify-content: flex-start;
+    align-content: center;
+    align-items: center;
+    margin-bottom: 15%;
+    width: 100%;
+}
+
+#instruction-step-form{
+    display: flex;
+    justify-content: center;
+    align-content: center;
+    align-items: center;
+    /*justify-content: flex-start;*/
+    /*align-content: center;*/
+    /*align-items: center;*/
+    margin-bottom: 7%;
+    /*width: inherit;*/
+    flex-grow: 1;
+}
+
+#instruction-step-form-without-button{
+    display: flex;
+    flex-direction: column;
+    /*width: inherit;*/
+}
+
+#instruction-form-text{
+    padding: 10px;
+    margin: 10px 0 20px;
+    border-radius: 10px;
+    width: 100%;
+}
+
+#instruction-step-form-text{
+    padding: 10px;
+    margin: 10px 0 10px;
+    border-radius: 10px;
+    width: inherit;
+}
+
+#instruction-step-form-number{
+    background-color: white;
+    display: flex;
+    width: inherit;
+    height: inherit;
+    padding: 10px;
+    border-radius: 10px;
+}
+
+#instruction-step-button-container{
+    width: 100%;
+    display: flex;
+    flex-direction: column;
+    justify-content: space-around;
+    align-items: center;
+    align-content: space-around;
+    margin-bottom: 10%;
+}
+
+#recipe-form-submit-button{
+    font-size: xx-large;
+    font-weight: bolder;
+    color: white;
+    background-color: #476A6F;
+    padding: 10px;
+    margin: 5px 0 10px;
+    border-radius: 10px;
+
+
 }
