--- a/frontend/src/components/EditShoppingItemDetails.css
+++ b/frontend/src/components/EditShoppingItemDetails.css
@@ -60,6 +60,7 @@
     background-color: #476A6F;
     padding: 10px;
     border-radius: 10px;
+    margin-bottom: 10px;
 }
 
 #item-submit-button-container{
