--- a/frontend/src/components/ShowInstructions.css
+++ b/frontend/src/components/ShowInstructions.css
@@ -14,6 +14,7 @@
     flex-direction: column;
     justify-content: center;
     align-items: center;
+    margin-bottom: -10px;
 }
 
 h6{
@@ -29,7 +30,7 @@ h6{
 #step-details {
     display: flex;
     flex-direction: row;
-    margin: 10px;
+    margin: 0 10px 10px;
 }
 
 #step-number {
